Fixed header and nav alignment issues

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -9,6 +9,12 @@
 .eventTheme,
 .eventDate {
     justify-self: center;
+    text-align: center;
+}
+
+.logo {
+    width: 100%;
+    max-width: 424px;
 }
 
 .register {
