--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -1,29 +1,96 @@
+
 .nav a {
+    font-size: 0.875rem;
+    letter-spacing: 0.0025rem;
     color: rgba(0,0,0,.87);
     text-decoration: none;
 }
 
 .nav a:first-of-type {
-    grid-column: col-start 1 / span 24;
-    grid-row: row-start;
+    font-size: 1rem;
+    letter-spacing: 0.005rem;
+    grid-row: 1;
+    justify-self: center;
 }
 
 .nav a:nth-of-type(2) {
-    grid-column: span 8 / -25;
-    grid-row: row-start;
+    grid-column: span 8 / -24;
+    grid-row: 2;
 }
 
 .nav a:nth-of-type(3) {
-    grid-column: span 8 / -17;
-    grid-row: row-start;
+    grid-column: span 8 / -16;
+    grid-row: 2;
 }
 
 .nav a:nth-of-type(4) {
-    grid-column: span 8 / -9;
-    grid-row: row-start;
+    grid-column: span 8 / -8;
+    grid-row: 2;
 }
 
 .nav a:nth-of-type(5) {
     grid-column: span 8 / -1;
-    grid-row: row-start;
+    grid-row: 2;
+}
+
+.nav a:not(:first-of-type) > i {
+    font-size: 21px
+}
+
+@media screen and (min-width: 600px) and (max-width: 719px) {
+    .nav a:nth-of-type(2) {
+        grid-column: span 8 / -28;
+    }
+
+    .nav a:nth-of-type(3) {
+        grid-column: span 8 / -20;
+    }
+
+    .nav a:nth-of-type(4) {
+        grid-column: span 8 / -12;
+    }
+
+    .nav a:nth-of-type(5) {
+        grid-column: span 8 / -4;
+    }
+}
+
+@media screen and (min-width: 720px) and (max-width: 839px) {
+    .nav a:nth-of-type(2) {
+        grid-column: span 8 / -32;
+    }
+    
+    .nav a:nth-of-type(3) {
+        grid-column: span 8 / -24;
+    }
+    
+    .nav a:nth-of-type(4) {
+        grid-column: span 8 / -16;
+    }
+    
+    .nav a:nth-of-type(5) {
+        grid-column: span 8 / -8;
+    }
+}
+
+@media screen and (min-width: 840px) {
+    .nav a {
+        font-size: 1rem;
+        letter-spacing: 0.005rem;
+    }
+
+    .nav a:first-of-type {
+        grid-column: col-start 1 / span 18;
+    }
+
+    .nav a:nth-of-type(2),
+    .nav a:nth-of-type(3),
+    .nav a:nth-of-type(4),
+    .nav a:nth-of-type(5) {
+        grid-row: 1;
+    }
+
+    .nav a:not(:first-of-type) > i {
+        font-size: 24px;
+    }
 }
